--- a/TravelTripProje/TravelTripProje.csproj
+++ b/TravelTripProje/TravelTripProje.csproj
@@ -137,6 +137,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202508012101030_AddBaslikToHakkimizda.cs" />
+    <Compile Include="Migrations\202508012101030_AddBaslikToHakkimizda.Designer.cs">
+      <DependentUpon>202508012101030_AddBaslikToHakkimizda.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Siniflar\Admin.cs" />
     <Compile Include="Models\Siniflar\AdresBlog.cs" />
@@ -320,6 +324,11 @@
     <Content Include="Scripts\bootstrap.bundle.js.map" />
     <Content Include="Scripts\jquery-3.7.0.slim.min.map" />
     <Content Include="Scripts\jquery-3.7.0.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202508012101030_AddBaslikToHakkimizda.resx">
+      <DependentUpon>202508012101030_AddBaslikToHakkimizda.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
