--- a/TravelTripProje/TravelTripProje.csproj
+++ b/TravelTripProje/TravelTripProje.csproj
@@ -311,6 +311,10 @@
     <Content Include="Views\Blog\_YorumListesi.cshtml" />
     <Content Include="Views\Otel\Index.cshtml" />
     <Content Include="Views\Etkinlik\Index.cshtml" />
+    <Content Include="Views\Admin\HakkimizdaListesi.cshtml" />
+    <Content Include="Views\Admin\HakkimizdaGetir.cshtml" />
+    <Content Include="Views\Admin\IletisimListesi.cshtml" />
+    <Content Include="Views\Admin\IletisimGetir.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
