er_diyagram.png dosyası eklendi

--- a/TravelTripProje/TravelTripProje.csproj
+++ b/TravelTripProje/TravelTripProje.csproj
@@ -183,6 +183,7 @@
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\partials.css" />
+    <Content Include="docs\er_diagram.png" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
